assets/css/homepage-style.css
/*

  Wire, presta atenção:
  Fiz a página com base em flex.

  Não mexe na estrutura em si.

  Em header -> pode mexer em tudo

  Em main -> background apenas

  Em footer ->  pode mexer em tudo

  O main é o segredo para que a página fique agora com 3 colunas. HEADER, MAIN E FOOTER

  Note que está tudo dentro da BODY tag. Deixe ficar assim

*/

* {
  box-sizing: border-box;
}

html, body {
  min-width: 100%;
  min-height: 100%;
  padding: 0;
  margin: 0;
  max-width: 100%;
  max-height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

header {
  height: 70px;
}

.bg-custom {
  background-image: linear-gradient(90deg, #FF9800, #FFC107);
}

.navbar-default .navbar-nav .nav-link {
  color: #fff;
}

.form-inline>.form-control:focus {
  border-color: #FF9800;
  box-shadow: 0 0 0 0.2rem rgba(255, 152, 0, .25);
}

.dropdown-toggle::after {
  display: none;
}

main {
  flex: auto;
  background-color: #e9e9e9;
  margin-top: -14px;
}

.sidebar {
  background-color: #fff;
  width: 300px;
  height: 100vh;
}

.capa {
  background: url('../img/cover.jpg') no-repeat;
  width: 300px;
  height: 100px;
}

.perfil {
  position: relative;
  left: 5px;
}

.avatar {
  background-color: #fdfdfd;
  width: 53px;
  height: 53px;
  border-radius: 30px;
  position: absolute;
  top: 20px;
  left: 15px;
}

.head {
  position: relative;
  bottom: 5px;
}

.info {
  color: #fff;
  font-size: 13px;
  font-weight: 600;
  position: relative;
  top: 25px;
  left: 80px;
}

.info>.cargo {
  text-transform: uppercase;
}

.menu {
  position: relative;
}

.navigation {
  width: 100%;
  height: 50px;
  position: relative;
  background-color: #eee;
  color: #333;
  font-size: 17px;
  font-weight: bold;
  text-transform: uppercase;
}

.navigation>span{
  position: absolute;
  top: 12px;
  left: 20px;
}

.menu a.active, .menu a:hover {
  color: #ff9800;
}

.menu a {
  color: #747474;
}

.menu>.texto {
  font-size: 13px;
  margin: -5px 0px 15px 30px;
}

footer {
  height: 50px;
  background-color: #FF9800;
}

